# noncrast

./: .gitignore  README.md
apps/backend/app/: models.ipynb  pyproject.toml
apps/ui/: package-lock.json  package.json
apps/ui-js/: package-lock.json  package.json
apps/ui-ts/: .eslintrc.cjs  README.md  forge.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.main.config.mts  vite.renderer.config.mts  vite.worker.config.mts  vitest.config.ts
apps/ui-ts/scripts/: run-vitest-electron.js
apps/ui-ts/src/: app.tsx  db.ts  global.d.ts  index.css  logger.ts  main.ts  mlWorker.js  preload.ts  renderer.ts  renderer.tsx  types.ts
apps/ui-ts/src/components/: Dashboard.tsx  FocusTask.tsx  Home.tsx  KpiCard.tsx  Nav.tsx  TaskDetailOverlay.tsx  Timer.tsx  task.tsx
apps/ui-ts/src/config/: DevTasks.ts  constants.ts  defaults.json  devTasks.ts
apps/ui-ts/src/pages/: Dashboard.tsx  Interruptions.tsx  Settings.tsx  Tasks.tsx
apps/ui-ts/src/settings/: schema.ts  storage.ts
apps/ui-ts/src/state/: settingsContext.tsx  timerContext.tsx  todoContext.tsx
apps/ui-ts/src/utils/: dateHelper.ts
apps/ui-ts/tests/: dateHelper.test.ts  db.test.ts  logger.test.ts  settings.storage.test.ts  utils.ts
