[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.117.1",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "pillow>=12.0.0",
    "pydantic>=2.11.9",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]
